# MIFARE-Classic

./: MIFARE.py  README.md  setup.cfg
examples/: functions.py  read_ascii.py  write_ascii.py
mifare/: __init__.py  mifare.py
