[metadata]
name = mifare-classic-mike1098
version = 0.0.1
url = https://github.com/mike1098/MIFARE-Classic.git
author = Michael Frank
author_email = michael.frank@mikefrank.de
license = GNU GENERAL PUBLIC LICENSE, Version 3.0
license_file = LICENSE
description = A supporting class for MIFARE CLassic 1k cards
long_description = file: README.rst
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
[options]
package_dir =
    = .
packages = mifare
py_modules=["mifare"]
python_requres = >=3.6

[options.packages.find]
exclude =
    tests
    tests.*
    __pycache__.*
    .*egg-info